--- a/kubejs/assets/supplementaries/lang/en_us.json
+++ b/kubejs/assets/supplementaries/lang/en_us.json
@@ -1,6 +1,8 @@
 {
-    "item.supplementaries.lumisene_bucket": "Oil Bucket",
-    "item.supplementaries.lunch_basket": "Lunch Box",
-    "item.supplementaries.wrench": "Crowbar"
-
+  "item.supplementaries.lumisene_bucket": "Oil Bucket",
+  "item.supplementaries.lunch_basket": "Lunch Box",
+  "item.supplementaries.wrench": "Crowbar",
+  "block.supplementaries.fine_wood": "Treated Wood",
+  "block.supplementaries.fine_wood_stairs": "Treated Wood Stairs",
+  "block.supplementaries.fine_wood_slab": "Treated Wood Slab"
 }
