--- a/kubejs/assets/minecraft/lang/en_us.json
+++ b/kubejs/assets/minecraft/lang/en_us.json
@@ -12,6 +12,8 @@
   "item.minecraft.diamond_leggings": "Steel Leggings",
   "item.minecraft.diamond_boots": "Steel Boots",
 
+  "item.minecraft.egg": "Egg",
+
   "item.minecraft.bone_meal": "Fertilizer",
 
   "block.minecraft.smoker": "Oven",
